--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "boostrap": "^2.0.0",
     "cdbreact": "^1.5.19",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
